# blavatsky-number

./: .gitignore  PROPOSAL.md  README.md  pyproject.toml
.github/workflows/: pages.yml
data/raw/: adversarial_lexicon.txt  edges_supplement.csv  seed_supplement.csv
scripts/: 01_seed_from_wiki.py  02_extract_cooccurrence.py  03_adversarial_edges.py  04_build_graph.py  05_export_web.py  list_figures.py
src/theosophy_number/: __init__.py  gazetteer.py  normalize.py  windows.py
web/: README.md  app.js  atlas.html  atlas.js  index.html  style.css  suggest.html  suggest.js
web/data/: graph.json
worker/: README.md  wrangler.toml
worker/src/: worker.js
